# calculator

./: .clang-tidy  CMakeLists.txt  README.md  calculator
src/: app.cpp  app.h  main.cpp
